--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -1,1 +1,10 @@
-<h1>Make your form here</h1>
+<!DOCTYPE HTML>
+<html>
+  <body>
+    <form method="post" action="/pirates">
+      <
+    </form>  
+    
+  </body>
+
+</html>
