Automatically backed up by Learn

--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -2,7 +2,7 @@
 <html>
   <body>
     <form method="post" action="/pirates">
-      <
+      <label for="name"> Pirate Name: </label>
     </form>  
     
   </body>
