Automatically backed up by Learn

--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -3,6 +3,11 @@
   <body>
     <form method="post" action="/pirates">
       <label for="name"> Pirate Name: </label>
+      <input type="text" id="name" name="pirate[name]">
+      <label for="weight"> Pirate Weight: </label>
+      <input type="text" id="name" name="pirate[weight]">
+      <label for="name"> Pirate Height: </label>
+      <input type="text" id="name" name="pirate[height]">
     </form>  
     
   </body>
