--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -6,6 +6,14 @@
 </div>
 
 <h2>Display your first ship here</h2>
-
+<% @ships.each.with_index do |ship, index| %>
+  <div class="ship">
+    <% if index == 0 %>
+    <p>Name: <%= ship.name%></p><br>
+    <p>Type: <%= ship.type %></p><br>
+    <p>Booty: <%= ship.booty %></p><br>
+    <% end %>
+  <% end %>
+  </div>
 
 <h2>Display your second ship here</h2>
